functional tests in work progress...
